--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ flex-direction: row;
 
  }
  /* media queries
- for tablet */
+ for tablet
  @media only screen and (min-width:688px){
     .container{
         width: auto;
@@ -157,4 +157,4 @@ flex-direction: row;
         grid-template-columns: repeat(1, 1fr);
     }
  
- }
+ } */
